...
                  placeHolderText = "Enter the title of your quickFix",
                  placeHolderColor = colorScheme.onSecondaryContainer,
                  shape = RoundedCornerShape(12.dp * heightRatio.value),
                  moveContentHorizontal = 10.dp * widthRatio.value,
                  heightField = 50.dp * heightRatio.value,
                  widthField = 360.dp * widthRatio.value,
                  modifier = Modifier.testTag("titleInput"),
                  showLabel = true,
                  label = {
                    Text(
                        "Title *",
                        style = MaterialTheme.typography.headlineSmall,
                        color = colorScheme.onBackground,
...
                  placeHolderText = "Enter the category",
                  placeHolderColor = colorScheme.onSecondaryContainer,
                  shape = RoundedCornerShape(12.dp * heightRatio.value),
                  moveContentHorizontal = 10.dp * widthRatio.value,
                  heightField = 50.dp * heightRatio.value,
                  widthField = 360.dp * widthRatio.value,
                  modifier = Modifier.testTag("categoryInput"),
                  showLabel = true,
                  label = {
                    Text(
                        "Category *",
                        style = MaterialTheme.typography.headlineSmall,
                        color = colorScheme.onBackground,
...
                  placeHolderText = "Describe the quickFix",
                  placeHolderColor = colorScheme.onSecondaryContainer,
                  shape = RoundedCornerShape(12.dp * heightRatio.value),
                  moveContentHorizontal = 10.dp * widthRatio.value,
                  heightField = 120.dp * heightRatio.value,
                  widthField = 360.dp * widthRatio.value,
                  modifier = Modifier.testTag("descriptionInput"),
                  showLabel = true,
                  label = {
                    Text(
                        "Description *",
                        style = MaterialTheme.typography.headlineSmall,
                        color = colorScheme.onBackground,
...
                  modifier = Modifier.testTag("locationText").padding(start = 3.dp),
                  style = MaterialTheme.typography.headlineSmall,
                  color = MaterialTheme.colorScheme.onBackground,
                  textAlign = TextAlign.Start)
              Box(
                  modifier =
                      Modifier.testTag("locationInput")
                          .shadow(
                              elevation = 2.dp,
                              shape = RoundedCornerShape(12.dp * heightRatio.value),
                              clip = false)
                          .clip(RoundedCornerShape(12.dp * heightRatio.value))
                          .background(colorScheme.surface)
...
                buttonColor = colorScheme.surface,
                textColor = colorScheme.onBackground,
                textStyle = MaterialTheme.typography.titleMedium,
                modifier =
                    Modifier.width(360.dp * widthRatio.value)
                        .height(50.dp * heightRatio.value)
                        .testTag("availabilityButton")
                        .graphicsLayer(alpha = 1f),
                iconId = R.drawable.calendar,
                iconContentDescription = "availability",
                iconColor = colorScheme.onBackground)

            Spacer(modifier = Modifier.padding(10.dp * heightRatio.value))
...
                  buttonColor = colorScheme.surface,
                  textColor = colorScheme.onBackground,
                  textStyle = MaterialTheme.typography.titleMedium,
                  modifier =
                      Modifier.width(360.dp * widthRatio.value)
                          .height(125.dp * heightRatio.value)
                          .testTag("picturesButton")
                          .graphicsLayer(alpha = 1f),
                  iconId = R.drawable.upload_image,
                  iconContentDescription = "upload_image",
                  iconColor = colorScheme.onBackground)
            } else {
              Box(
...
                              125.dp *
                                  heightRatio
                                      .value) // Same height as the button when no images exist
                          .clip(RoundedCornerShape(8.dp))
                          .background(colorScheme.surface)
                          .clickable { showUploadImageSheet = true }
                          .testTag("uploadedImagesBox")) {
                    Row(
                        modifier =
                            Modifier.fillMaxSize()
                                .padding(start = 15.dp, top = 4.dp, bottom = 4.dp),
                        verticalAlignment = Alignment.CenterVertically,
                        horizontalArrangement = Arrangement.Start) {
...
                              tint = colorScheme.onBackground)

                          Spacer(modifier = Modifier.width(15.dp))

                          // LazyRow for displaying images
                          LazyRow(
                              modifier = Modifier.fillMaxSize().testTag("uploadedImagesLazyRow"),
                              contentPadding = PaddingValues(horizontal = 8.dp)) {
                                val maxVisibleImages = 3
                                val visibleImages = uploadedImages.take(maxVisibleImages)
                                val remainingImageCount = uploadedImages.size - maxVisibleImages

                                // Display the visible images
...
                          !categoryIsSelected ||
                          !locationIsSelected ||
                          descriptionIsEmpty)
                          colorScheme.error
                      else colorScheme.onSecondaryContainer,
                  style = MaterialTheme.typography.bodySmall,
                  modifier = Modifier.padding(start = 9.dp).testTag("mandatoryText"))
            }

            QuickFixButton(
                buttonText = "Post your announcement",
                onClickAction = {
                  val announcementId = announcementViewModel.getNewUid()
...
                buttonColor = colorScheme.primary,
                textColor = colorScheme.onPrimary,
                textStyle = MaterialTheme.typography.titleMedium,
                modifier =
                    Modifier.width(360.dp * widthRatio.value)
                        .height(55.dp * heightRatio.value)
                        .testTag("announcementButton")
                        .graphicsLayer(alpha = 1f),
                enabled =
                    !titleIsEmpty &&
                        categoryIsSelected &&
                        locationIsSelected &&
                        !descriptionIsEmpty)
...
